--- a/emotes.html
+++ b/emotes.html
@@ -102,7 +102,7 @@
                 <li class=sidebarTitle>
                     <li><a href=#>Overview</a>
                         <ul>
-                            <li><a href=#>About</a></ul>
+                            <li><a href=/BetterDiscord/index.html>About</a></ul>
                         <li><a href=#>Installation</a>
                             <ul>
                                 <li><a href=/BetterDiscord/install_win.html>Installing on Windows</a>
