--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <li><a href=https://github.com/0mniscient/Discord-Themes target=_blank>Github Repo</a>
                             <li><a href=https://discordapp.com/invite/0Tmfo5ZbORCRqbAd target=_blank>Support Server</a>
                                 <li><a href=https://discordapp.com/ target=_blank>DiscordApp</a>
-                                    <li><a href=/contact.html>Contact</a></ul>
+                                    <li><a href=https://0mniscient.github.io/BetterDiscord/contact.html>Contact</a></ul>
                     </li>
                     <!--comment out this block if you want to hide search-->
                     <li>
@@ -193,10 +193,6 @@
 ~/Library/Application Support/Discord/app-x.x.xxx/resources/node_modules/BetterDiscord
 ~/Library/Application Support/Discord/app-x.x.xxx/resources/app</div></pre></code>
                     </ul>
-                    <h2 id=common-issues>Common issues</h2>
-                    <p>For installation and general issues:
-                        <ul>
-                            <li><a href=/BetterDiscord/faq.html>FAQ</a></ul>
                         <div class=tags></div>
                         </div>
                         <hr class=shaded>
