--- a/emotes.html
+++ b/emotes.html
@@ -2,9 +2,9 @@
 <meta charset=utf-8>
 <meta content="IE=edge" http-equiv=X-UA-Compatible>
 <meta content="width=device-width,initial-scale=1" name=viewport>
-<meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp to optimize Discord with Plugins and Themes and Twitch Emotes with it's built-in JavaScript loader." name="description">
+<meta content="Learn how to use the BetterDiscord emotes and there modifiers! Shake,spin,flip and flap all your emotes, make them come alive! Favorite all your best emotes to have them on the tip of your fingers." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
-<title>BetterDiscord Documentation and Tutorials</title>
+<title>BetterDiscord Emotes</title>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
 <link href=doc_files/modern-business.css rel=stylesheet>
