--- a/making_theme.html
+++ b/making_theme.html
@@ -188,21 +188,21 @@
                         <ul>
                             <li>
                                 <p>Template was made by Hammock.
-                                    <br><a href=https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/Transparent/transparent.theme.css>Download</a></ul>
+                                    <br><a href=https://github.com/cosmicsalad/Discord-Themes-and-Plugins/blob/master/themes/Transparent/transparent.theme.css target=_blank>Download</a></ul>
                         <h2 id=Tutorial>Tutorial</h2>
                         <p>Time to learn how to make a theme.
                             <ul>
                                 <li>
                                     <p>First thing first you will need to have <b>some</b> knowledge of CSS without it you will not be able to make a theme.
                                         <ul>
-                                            <li><a href=http://www.w3schools.com/css/>W3Schools</a>
+                                            <li><a href=http://www.w3schools.com/css/ target=_blank>W3Schools</a>
                                             </li>
-                                            <li><a href=https://www.codecademy.com/learn/web>Codecademy</a></li>
+                                            <li><a href=https://www.codecademy.com/learn/web target=_blank>Codecademy</a></li>
                                         </ul>
                                         <li>
                                             <p>Now heead on over to the Themes directory
                                                 <div class=highlighter-rouge><pre class=highlight><code>Windows: %appdata%\betterdiscord\themes\
-    Mac: ~/Library/Preferences/BetterDiscord/themes</code></pre></div>
+    Mac: ~/Library/Preferences/BetterDiscord/themes/</code></pre></div>
                                                 <li>
                                                     <p>Make a file called <code>ScarryNight.theme.css</code>
                                                         <li>
@@ -291,7 +291,7 @@
                                                                                                     <ul>
                                                                                                     <li>Light Theme --> <code>.theme-light .chat</code>
                                                                                                     <li>Dark Theme --> <code>.theme-dark .chat</code></ul></ul>
-                                                                                                      <li>Want your theme to work for both "light" and "Dark" themes? Make sure all your classes don't have <code>.theme-dark</code> nor <code>.theme-light</code> and just <code>!important</code> everything!</ul>
+                                                                                                      <li>Want your theme to work for both "Light" and "Dark" themes? Make sure all your classes don't have <code>.theme-dark</code> nor <code>.theme-light</code> and just <code>!important</code> everything!</ul>
                                                                                                         <div class="alert alert-danger" role="alert"><i class="fa fa-exclamation-circle"></i> <b>Warning: </b>Using !important may or may not cause future problems with your theme be careful using them!</div>
                             <div class=tags><b>Tags: </b><a href=/install_theme.html class="btn btn-default cursorNorm navbar-btn" role=button>install_theme</a> <a href=/theme.html class="btn btn-default cursorNorm navbar-btn" role=button>Themes</a> <a href=/making_theme.html
                                     class="btn btn-default cursorNorm navbar-btn" role=button>making_theme</a></div>
