--- a/making_plugin.html
+++ b/making_plugin.html
@@ -159,85 +159,90 @@
                         })
                     })
                 </script>
-
-                <style>
-                    #barr-container {
-                        text-align: center;
-                        margin: 20px;
-                    }
-
-                    .bar-main-container {
-                        margin: 10px auto;
-                        width: 300px;
-                        height: 50px;
-                        -webkit-border-radius: 4px;
-                        -moz-border-radius: 4px;
-                        border-radius: 4px;
-                        font-family: sans-serif;
-                        font-weight: normal;
-                        font-size: 0.8em;
-                        color: #FFF;
-                    }
-
-                    .bar-wrap {
-                        padding: 8px;
-                    }
-
-                    .bar-percentage {
-                        float: left;
-                        background: rgba(0, 0, 0, 0.13);
-                        -webkit-border-radius: 4px;
-                        -moz-border-radius: 4px;
-                        border-radius: 4px;
-                        padding: 9px 0px;
-                        width: 18%;
-                        height: 32px;
-                    }
-
-                    .bar-container {
-                        float: right;
-                        -webkit-border-radius: 10px;
-                        -moz-border-radius: 10px;
-                        border-radius: 10px;
-                        height: 10px;
-                        background: rgba(0, 0, 0, 0.13);
-                        width: 78%;
-                        margin: 12px 0px;
-                        overflow: hidden;
-                    }
-
-                    .bar {
-                        float: left;
-                        background: #FFF;
-                        height: 100%;
-                        -webkit-border-radius: 10px 0px 0px 10px;
-                        -moz-border-radius: 10px 0px 0px 10px;
-                        border-radius: 10px 0px 0px 10px;
-                        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-                        filter: alpha(opacity=100);
-                        -moz-opacity: 1;
-                        -khtml-opacity: 1;
-                        opacity: 1;
-                    }
-                    /* COLORS */
-
-                    .emerald {
-                        background: #2db5a9;
-                    }
-                </style>
                 <div id=toc></div>
-                <div class="alert alert-warning" role=alert><i class="fa fa-warning"></i> <b>Important: </b>This tutorial is still in progress.</div>
-                <h2 id=Progress>Progress</h2>
-                <div id="barr-container">
-                    <div id="bar-1" class="bar-main-container emerald">
-                        <div class="bar-wrap">
-                            <div class="bar-percentage" data-percentage="25">25%</div>
-                            <div class="bar-container">
-                                <div class="bar" style="width: 25%;"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="alert alert-warning" role=alert><i class="fa fa-warning"></i> <b>Important: </b>Host your plugins on Github! Soon it will be required for plugins to be hosted on Github.</div>
+                <h2 id=Template>Template</h2>
+                <p>Don't care about the tutorial and is ready to start? Check out the template below and the <a href=https://0mniscient.github.io/BetterDiscord/plugin_api.html target=_blank>plugin api</a>.
+                    <ul>
+                        <li>
+                            <p>Template was made by Jiiks.
+                                <br><a href=https://gist.github.com/Jiiks/71edd5af0beafcd08956 target=_blank>Download</a></ul>
+                <h2 id=Tutorial>Tutorial</h2>
+                <p>Time to learn how to make a plugin.
+                    <ul>
+                        <li>
+                            <p>First thing first you will need to have <b>some</b> knowledge of Javascript without it you will not be able to make a plugin.
+                                <ul>
+                                    <li><a href=http://www.w3schools.com/js/ target=_blank>W3Schools</a>
+                                    </li>
+                                    <li><a href=https://www.codecademy.com/learn/javascript target=_blank>Codecademy</a></li>
+                                </ul>
+                                <li>
+                                    <p>Now heead on over to the Plugins directory
+                                        <div class=highlighter-rouge><pre class=highlight><code>Windows: %appdata%\betterdiscord\plugins\
+Mac: ~/Library/Preferences/BetterDiscord/plugins/</code></pre></div>
+                                        <li>
+                                            <p>Make a file called <code>MyPlugin.plugin.css</code>
+                                                <li>
+                                                    <p>Open the file we just made with a text editor (not notepad) and insert this on the <b>first</b> line
+                                                        <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"MyPlugin"}*//</code></pre></div>Tip: Spaces in the title should use _
+                                                        instead of an actual space to fix any future problems.
+                                                        <li>
+                                                            <p>When you reload Discord go to <code>plugins</code> in the BetterDiscord settings and you should see...nothing?
+                                                                <br><img alt="MyPlugin in BetterDiscord settings" src=https://i.imgur.com/kusxW1m.png>
+                                                                <li>
+                                                                  <p>This is because the meta tag works differently for plugins it doesn't work the same as a themes meta tag we have to do more work to get our plugin to show.
+                                                                    <li>Open the plugin file we created and insert this below the meta tag.
+                                                                      <div class=highlighter-rouge><pre class=highlight><code>var MyPlugin = function () {};
+
+MyPlugin.prototype.start = function () {
+
+};
+
+MyPlugin.prototype.load = function () {
+
+};
+
+MyPlugin.prototype.unload = function () {}
+;
+
+MyPlugin.prototype.stop = function () {
+
+};
+
+MyPlugin.prototype.onMessage = function () {
+    //called when a message is received
+};
+
+MyPlugin.prototype.onSwitch = function () {
+    //called when a server or channel is switched
+};
+
+MyPlugin.prototype.observer = function (e) {
+    //raw MutationObserver event for each mutation
+};
+
+MyPlugin.prototype.getSettingsPanel = function () {
+    return "Settings Panel";
+};
+
+MyPlugin.prototype.getName = function () {
+    return "My Plugin";
+};
+
+MyPlugin.prototype.getDescription = function () {
+    return "This is the Description";
+};
+
+MyPlugin.prototype.getVersion = function () {
+    return "0.1.0";
+};
+
+MyPlugin.prototype.getAuthor = function () {
+    return "Omniscient";
+};</div></pre></code>
+<li>Now save the file and restart Discord (CTRL+R) and you will see your plugin in the settings!
+  <li>How do you make it do things? Click <a href=https://0mniscient.github.io/BetterDiscord/plugin_api.html target=_blank>here</a> to learn the BetterDiscords plugin api.
                 <div class=tags><b>Tags: </b><a href=/install_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>install_plugin</a> <a href=/plugins.html class="btn btn-default cursorNorm navbar-btn" role=button>Plugins</a> <a href=/making_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>making_plugin</a></div>
             </div>
             <hr class=shaded>
