--- a/making_plugin.html
+++ b/making_plugin.html
@@ -112,12 +112,12 @@
                                 <ul>
 
                                     <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a>
-                                    <li><a href=/BetterDiscord/emotes.html>Emotes</a></ul>
+                                        <li><a href=/BetterDiscord/emotes.html>Emotes</a></ul>
                                 <li><a href=#>Troubleshooting</a>
                                     <ul>
-                                      <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
-                                          <li><a href=/BetterDiscord/plugin_troubleshoot.html>Plugins</a>
-                                              <li><a href=/BetterDiscord/betterdiscord_troubleshoot.html>BetterDiscord</a></ul>
+                                        <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
+                                            <li><a href=/BetterDiscord/plugin_troubleshoot.html>Plugins</a>
+                                                <li><a href=/BetterDiscord/betterdiscord_troubleshoot.html>BetterDiscord</a></ul>
                                     <li><a href=#>Guides</a>
                                         <ul>
                                             <li><a href=/BetterDiscord/install_theme.html>Installing Themes</a>
@@ -167,33 +167,32 @@
                         <li>
                             <p>Template was made by Jiiks.
                                 <br><a href=https://gist.github.com/Jiiks/71edd5af0beafcd08956 target=_blank>Download</a></ul>
-                <h2 id=Tutorial>Tutorial</h2>
-                <p>Time to learn how to make a plugin.
-                    <ul>
-                        <li>
-                            <p>First thing first you will need to have <b>some</b> knowledge of Javascript without it you will not be able to make a plugin.
-                                <ul>
-                                    <li><a href=http://www.w3schools.com/js/ target=_blank>W3Schools</a>
-                                    </li>
-                                    <li><a href=https://www.codecademy.com/learn/javascript target=_blank>Codecademy</a></li>
-                                </ul>
-                                <li>
-                                    <p>Now heead on over to the Plugins directory
-                                        <div class=highlighter-rouge><pre class=highlight><code>Windows: %appdata%\betterdiscord\plugins\
+                    <h2 id=Tutorial>Tutorial</h2>
+                    <p>Time to learn how to make a plugin.
+                        <ul>
+                            <li>
+                                <p>First thing first you will need to have <b>some</b> knowledge of Javascript without it you will not be able to make a plugin.
+                                    <ul>
+                                        <li><a href=http://www.w3schools.com/js/ target=_blank>W3Schools</a>
+                                        </li>
+                                        <li><a href=https://www.codecademy.com/learn/javascript target=_blank>Codecademy</a></li>
+                                    </ul>
+                                    <li>
+                                        <p>Now heead on over to the Plugins directory
+                                            <div class=highlighter-rouge><pre class=highlight><code>Windows: %appdata%\betterdiscord\plugins\
 Mac: ~/Library/Preferences/BetterDiscord/plugins/</code></pre></div>
-                                        <li>
-                                            <p>Make a file called <code>MyPlugin.plugin.css</code>
-                                                <li>
-                                                    <p>Open the file we just made with a text editor (not notepad) and insert this on the <b>first</b> line
-                                                        <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"MyPlugin"}*//</code></pre></div>Tip: Spaces in the title should use _
-                                                        instead of an actual space to fix any future problems.
-                                                        <li>
-                                                            <p>When you reload Discord go to <code>plugins</code> in the BetterDiscord settings and you should see...nothing?
-                                                                <br><img alt="MyPlugin in BetterDiscord settings" src=https://i.imgur.com/kusxW1m.png>
-                                                                <li>
-                                                                  <p>This is because the meta tag works differently for plugins it doesn't work the same as a themes meta tag we have to do more work to get our plugin to show.
-                                                                    <li>Open the plugin file we created and insert this below the meta tag.
-                                                                      <div class=highlighter-rouge><pre class=highlight><code>var MyPlugin = function () {};
+                                            <li>
+                                                <p>Make a file called <code>MyPlugin.plugin.css</code>
+                                                    <li>
+                                                        <p>Open the file we just made with a text editor (not notepad) and insert this on the <b>first</b> line
+                                                            <div class=highlighter-rouge><pre class=highlight><code>//META{"name":"MyPlugin"}*//</code></pre></div>Tip: Spaces in the title should use _ instead of an actual space to fix any future problems.
+                                                            <li>
+                                                                <p>When you reload Discord go to <code>plugins</code> in the BetterDiscord settings and you should see...nothing?
+                                                                    <br><img alt="MyPlugin in BetterDiscord settings" src=https://i.imgur.com/kusxW1m.png>
+                                                                    <li>
+                                                                        <p>This is because the meta tag works differently for plugins it doesn't work the same as a themes meta tag we have to do more work to get our plugin to show.
+                                                                            <li>Open the plugin file we created and insert this below the meta tag.
+                                                                                <div class=highlighter-rouge><pre class=highlight><code>var MyPlugin = function () {};
 
 MyPlugin.prototype.start = function () {
 
@@ -241,39 +240,64 @@ MyPlugin.prototype.getVersion = function () {
 MyPlugin.prototype.getAuthor = function () {
     return "Omniscient";
 };</div></pre></code>
-<li>Now save the file and restart Discord (CTRL+R) and you will see your plugin in the settings!
-  <li>How do you make it do things? Click <a href=https://0mniscient.github.io/BetterDiscord/plugin_api.html target=_blank>here</a> to learn the BetterDiscords plugin api.
-                <div class=tags><b>Tags: </b><a href=/install_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>install_plugin</a> <a href=/plugins.html class="btn btn-default cursorNorm navbar-btn" role=button>Plugins</a> <a href=/making_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>making_plugin</a></div>
-            </div>
-            <hr class=shaded>
-            <footer>
-                <div class=row>
-                    <div class="col-lg-12 footer">©2016 Omni Docs. All rights reserved.
-                        <br>
-                    </div>
-                </div>
-            </footer>
-        </div>
-        <!-- /.row -->
-    </div>
-    <!-- /.container -->
-</div><a href=javascript:void(0); id=scroll style=display:none title="Scroll to Top">Top<span></span></a>
-<script src=js/top.js></script>
-<script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js></script>
-<script src=https://cdnjs.cloudflare.com/ajax/libs/anchor-js/2.0.0/anchor.min.js></script>
-<script>
-    (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+                                                                                    <li>Now save the file and restart Discord (CTRL+R) and you will see your plugin in the settings!
+                                                                                        <li>How do you make it do things? Click <a href=https://0mniscient.github.io/BetterDiscord/plugin_api.html target=_blank>here</a> to learn the BetterDiscords plugin api.
+                        </ul>
+                        <h2 id=Details>Details</h2>
+                        <ul>
+                            <li>Plugins are limited to one file.</li>
+                            <ul>
+                                <li>There can be multiple files in the BetterDiscord plugins directory, but to prevent junk and prevent future collisions, it is best practice to include your entire plugin within one .js file.</li>
+                            </ul>
 
-    ga('create', 'UA-65593962-3', 'auto');
-    ga('send', 'pageview');
-</script>
+                            <li>Discord isn't just a browser
+                                <ul>
+                                    <li>Discord is node.js and chromium as one. BetterDiscord plugins can use all native node.js functions and modules. It is possible to include pure js node modules within your plugin using webpack. Any modules that require
+                                        compilation and/or do not have pure js alternatives will of course not work.</li>
+                                </ul>
+                                <li>Plugins are susceptible to throttling.
+                                    <ul>
+                                        <li>By default, Discord will throttle plugins when Discord is minimized. Currently there are no in-plugin workarounds to fix this. Throttling is the same as chromium, functions like setInterval and setTimeout will be
+                                            throttled to at least 1000ms</li>
+                                    </ul>
+                                    <li>Add namespaces to your events.
+                                        <ul> <li>When creating selectors like $(document).on('dblclick'), instead use a namespace such as $(document).on('dblclick.dce') in order to easily unload the event with $(document).off("dblclick.dce") without unloading
+                                            all dblclick events.</li>
+                                    </ul>
+                        </ul>
+
+                        <div class=tags><b>Tags: </b><a href=/install_plugin.html class="btn btn-default cursorNorm navbar-btn" role=button>install_plugin</a> <a href=/plugins.html class="btn btn-default cursorNorm navbar-btn" role=button>Plugins</a> <a href=/making_plugin.html
+                                class="btn btn-default cursorNorm navbar-btn" role=button>making_plugin</a></div>
+                        </div>
+                        <hr class=shaded>
+                        <footer>
+                            <div class=row>
+                                <div class="col-lg-12 footer">©2016 Omni Docs. All rights reserved.
+                                    <br>
+                                </div>
+                            </div>
+                        </footer>
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </div><a href=javascript:void(0); id=scroll style=display:none title="Scroll to Top">Top<span></span></a>
+    <script src=js/top.js></script>
+    <script src=https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js></script>
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/anchor-js/2.0.0/anchor.min.js></script>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-65593962-3', 'auto');
+        ga('send', 'pageview');
+    </script>
