--- a/betterdiscord_troubleshoot.html
+++ b/betterdiscord_troubleshoot.html
@@ -111,7 +111,7 @@
                             <li><a href=#>How to use</a>
                                 <ul>
                                     <li><a href=/BetterDiscord/plugin_api.html>PluginAPI</a>
-                                    <li><a href=/BetterDiscord/emotes.html>Emotes</a></ul>
+                                        <li><a href=/BetterDiscord/emotes.html>Emotes</a></ul>
                                 <li><a href=#>Troubleshooting</a>
                                     <ul>
                                         <li><a href=/BetterDiscord/theme_troubleshoot.html>Themes</a>
@@ -198,6 +198,23 @@
                                                             <p>3 letter emotes are blacklisted. LUL converts to LUUL
                                                                 <li>
                                                                     <p>Common words such as STOP! are blacklisted</ul>
+                                            <h2 id=addserver>Add my Server</h2>
+                                            <p>Want to add your server to the BetterDiscord server list?</p>
+                                            <ul>
+                                                <li>
+                                                    <p>Go to <a href=https://www.discordservers.com/ target=_blank>Discordservers.com</a></p>
+                                                </li>
+                                                <li>
+                                                    <p>On the top right click "Add Your Server" then go through the steps to add your server</p>
+                                                    <li>
+                                                        <p>That's it! Now as soon as you see your server in the <a href=https://www.discordservers.com/ target=_blank>Discordservers.com</a> list it should be on BetterDiscord also.</p></ul>
+                                                   <h2 id=noservers>Server list empty</h2>
+                                                   <p>Your server list is empty in BetterDiscord? This could be one of two things</p>
+                                                   <ul>
+                                                     <li>
+                                                       <p><a href=https://www.discordservers.com/ target=_blank>Discordservers.com</a> is having issues on their end and we can't possible do anything to fix this.</p>
+                                                       <li>
+                                                         <p>Your internet connection is too slow or it's dead.
             </div>
             <hr class=shaded>
             <footer>
