--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp to optimize Discord with Plugins and Themes and Twitch Emotes with it's built-in JavaScript loader." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="BetterDiscord Docs" />
 <meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
 <title>BetterDiscord Documentation and Tutorials</title>
