--- a/emotes.html
+++ b/emotes.html
@@ -4,6 +4,11 @@
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="Learn how to use the BetterDiscord emotes and there modifiers! Shake,spin,flip and flap all your emotes, make them come alive! Favorite all your best emotes to have them on the tip of your fingers." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:site_name" content="Omni" />
+<meta property="og:title" content="BetterDiscord Docs" />
+<meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
 <title>BetterDiscord Emotes</title>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
