--- a/404.html
+++ b/404.html
@@ -7,6 +7,11 @@
 <!--<![endif]-->
 <meta charset=utf-8>
 <title>404 Page not found!</title>
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:site_name" content="Omni" />
+<meta property="og:title" content="404 Page not found!" />
+<meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
 <!-- Libs CSS -->
 <link href=https://0mniscient.github.io/404_files/bootstrap.min.css rel=stylesheet media=all>
 <!-- Template CSS -->
