--- a/plugin_troubleshoot.html
+++ b/plugin_troubleshoot.html
@@ -4,6 +4,11 @@
 <meta content="width=device-width,initial-scale=1" name=viewport>
 <meta content="All questions that have to do with Plugins are answered here! Time to make your BetterDiscord experience a whole lot better!" name=description>
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
+<meta property="og:site_name" content="Omni" />
+<meta property="og:title" content="BetterDiscord Docs" />
+<meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
 <title>Plugin Troubleshooting</title>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
