--- a/install_mac.html
+++ b/install_mac.html
@@ -8,7 +8,7 @@
 <meta property="og:url" content="https://0mniscient.github.io/BetterDiscord/" />
 <meta property="og:site_name" content="Omni" />
 <meta property="og:title" content="BetterDiscord Docs" />
-<meta property="og:image" content="https://i.imgur.com/GZVRLfz.png" />
+<meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <title>Installing BetterDiscord on Mac</title>
 <link href=doc_files/font-awesome.min.css rel=stylesheet>
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
