--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp to optimize Discord with Plugins and Themes and Twitch Emotes with it's built-in JavaScript loader." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="C:\Users\Chris\Desktop\Folders\Omni Docs\Stylesheets\style.css">
+<link rel="stylesheet" href="BetterDiscord/Stylesheets/style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css">
@@ -218,7 +218,7 @@
                 </div>
             </nav>
             <!-- Scripts -->
-            <script src="C:\Users\Chris\Desktop\Folders\Omni Docs\Scripts\main.js"></script>
+            <script src="BetterDiscord/Scripts/main.js"></script>
             <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
             <!-- Algolia -->
