--- a/install_mac.html
+++ b/install_mac.html
@@ -110,7 +110,7 @@
                             <a href="/BetterDiscord/install_linux.html" class="sidebar-link">Linux</a>
                             <strong class="sidebar-title">How to use</strong>
                             <a href="/BetterDiscord/plugin_api.html" class="sidebar-link">Plugin API</a>
-                            <a href=/BetterDiscord"/emotes.html" class="sidebar-link">Emotes</a>
+                            <a href=/BetterDiscord/emotes.html class="sidebar-link">Emotes</a>
                             <strong class="sidebar-title">Troubleshooting</strong>
                             <a href="/BetterDiscord/betterdiscord_troubleshoot.html" class="sidebar-link">BetterDiscord</a>
                             <a href="/BetterDiscord/theme_troubleshoot.html" class="sidebar-link">Themes</a>
