--- a/theme_troubleshoot.html
+++ b/theme_troubleshoot.html
@@ -19,6 +19,17 @@
 <meta property="og:image" content="https://i.imgur.com/3sc5OG3.png" />
 <!-- Icon -->
 <link href=https://imgur.com/GZVRLfz.png rel="shortcut icon">
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-65593962-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </head>
 
