--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="Documentation for BetterDiscord, a 3rd party software for Discordapp to optimize Discord with Plugins and Themes and Twitch Emotes with it's built-in JavaScript loader." name="description">
 <meta content="Omni Omniscient Jiiks Hammock Maple Bluescream BetterDiscord Discord Themes Plugins Theme Plugin Installation How-To" name="keywords">
 <!-- CSS -->
-<link rel="stylesheet" href="/BetterDiscord/Stylesheets/Style.css">
+<link rel="stylesheet" href="/Stylesheets/Style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css">
@@ -231,7 +231,7 @@
                 </div>
             </nav>
             <!-- Scripts -->
-            <script src="/BetterDiscord/Scripts/main.js"></script>
+            <script src="/Scripts/main.js"></script>
             <script src="https://cdn.jsdelivr.net/retinajs/1.3.0/retina.min.js" async></script>
 
             <!-- Algolia -->
